# arma3-session-bridge

./: .env.example  .gitignore  DEPLOYMENT.md  README.md  docker-compose.yml  openapi.yaml
.github/workflows/: build-windows.yml  deploy.yml  init-wiki.yml
.sisyphus/plans/: repo-public-invite-text.md
client/windows/: LICENSE.txt  index.html  package-lock.json  package.json  vite.config.ts
client/windows/src/: App.css  App.tsx  index.css  main.tsx  vite-env.d.ts
client/windows/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
client/windows/src-tauri/capabilities/: default.json
client/windows/src-tauri/icons/: icon.icns
client/windows/src-tauri/nsis/: hooks.nsh
client/windows/src-tauri/src/: lib.rs  main.rs  native_ping.rs  support_bundle.rs  tunnel.rs  vpn.rs  vpn_state.rs
client/windows/src-tauri/tests/: vpn_test.rs
client/windows/src/components/: ConnectionInfoPanel.tsx  DiagnosePanel.tsx  FirstRunWizard.tsx  HostSessionForm.tsx  OnlinePlayersList.tsx  SessionList.tsx  SupportBundleDialog.tsx  TrayMenu.tsx  VpnStateTimeline.tsx  VpnStatusBar.tsx  vpnErrorCatalog.ts
client/windows/src/i18n/: LanguageContext.tsx  translations.ts
docs/: user-manual-de.md  user-manual-en.md
docs/superpowers/plans/: 2026-03-10-vpn-state-machine-then-premium-ux.md
scripts/: wg-watchdog.sh
server/admin-ui/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
server/admin-ui/src/: App.tsx  index.css
server/admin-ui/src/__tests__/: LoginPage.test.ts  LoginPage.test.tsx  PeersPage.test.ts  PeersPage.test.tsx
server/admin-ui/src/api/: client.ts  peerCleanup.ts  peers.ts  sessions.ts  settings.ts  wgStats.ts
server/admin-ui/src/components/: AddPeerModal.tsx  EventLog.tsx  Layout.tsx  OptimizationBadges.tsx  StatsCards.tsx  TrafficChart.tsx  WgStatsCards.tsx
server/admin-ui/src/context/: AuthContext.tsx
server/admin-ui/src/hooks/: useAuth.ts
server/admin-ui/src/i18n/: settingsTranslations.ts
server/admin-ui/src/pages/: DashboardPage.tsx  LoginPage.tsx  PeersPage.tsx  SessionsPage.tsx  SettingsPage.tsx
server/admin-ui/src/utils/: csvExport.ts
server/api/: Dockerfile  auth.py  database.py  main.py  models.py  requirements.txt
server/api/routers/: admin.py  peers.py  sessions.py  settings.py  vpn_mode.py
server/api/services/: connection_quality.py  event_bus.py  host_probe.py  peer_cleanup.py  peer_status.py  session_cleanup.py  wireguard.py
server/api/tests/: conftest.py  test_health.py  test_host_probe.py  test_peers.py  test_sessions.py
server/wireguard/: entrypoint.sh  iptables-arma3.sh
wiki/: Configuration-DE.md  Configuration.md  FAQ-DE.md  FAQ.md  Home.md  Installation-DE.md  Installation.md  Troubleshooting-DE.md  Troubleshooting.md
