[package]
name = "arma3-session-bridge-client"
version = "0.5.0"
description = "Arma 3 Session Bridge — Windows Client (Tauri v2)"
authors = ["YourGitHubUser <ralf.arnold@it-bfw.de>"]
license = "MIT"
repository = "https://github.com/YourGitHubUser/arma3-session-bridge"
edition = "2021"
rust-version = "1.77"

# ── Library crate (used by integration tests and main binary) ─────────────────
[lib]
name = "arma3_session_bridge_client"
crate-type = ["rlib"]

# ── Binary ───────────────────────────────────────────────────────────────────
[[bin]]
name = "arma3-session-bridge-client"
path = "src/main.rs"

# ── Build dependencies ────────────────────────────────────────────────────────
[build-dependencies]
tauri-build = { version = "2", features = [] }

# ── Runtime dependencies ──────────────────────────────────────────────────────
[dependencies]
# Tauri v2 with system-tray support
tauri = { version = "2", features = ["tray-icon"] }

# Serialization (shared with frontend via Tauri commands)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async HTTP client — rustls avoids OpenSSL dependency
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }

# Async runtime — tokio::time for heartbeat interval
tokio = { version = "1", features = ["time"] }

# WireGuard keypair types — x25519-dalek must match boringtun 0.5's pinned version.
# boringtun 0.5.3 uses x25519-dalek =2.0.0-rc.3 and does NOT re-export it.
x25519-dalek = { version = "=2.0.0-rc.3", features = ["reusable_secrets", "static_secrets"] }
rand = "0.8"
base64 = "0.22"

# ── Embedded WireGuard tunnel (no external wireguard.exe needed) ──────────────
# These are Windows-only because wintun is a Windows TUN driver binding.
[target.'cfg(windows)'.dependencies]
# boringtun: pure-Rust WireGuard protocol implementation.
boringtun = { version = "0.5", default-features = false }
# wintun: Rust bindings for wintun.dll — Windows user-space TUN adapter.
wintun = "0.5"

# ── Windows ICMP API for native ping (no ping.exe needed) ────────────────
# windows-sys bindings for IcmpSendEcho native ping (Windows-only).
windows-sys = { version = "0.59", features = [
    "Win32_NetworkManagement_IpHelper",
    "Win32_Foundation",
] }

# ── Release profile — optimise for size (Windows installer) ──────────────────
[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
